kubernetes/weather-app-demo/overlay/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-app-demo-deployment
spec:
  template:
    spec:
      containers:
        - name: weather-app-demo-container
          image: registry/weather-app-demo:v2.0.0 
          resources:
            requests:
              memory: "128Mi" 
              cpu: "200m"
            limits:
              memory: "256Mi"
              cpu: "300m"
